<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rel">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rel1"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_appname"
            android:text="@string/app_name"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/textSizeVeryLarge"
            android:textStyle="bold"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/magin_40"
        android:layout_below="@+id/rel1">


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittext_bg"
            android:padding="5dp" />


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:layout_below="@+id/tv_email"/>



        <EditText
            android:id="@+id/ed_password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittext_bg"
            android:padding="5dp"
            android:layout_below="@+id/ed_email"
            android:layout_marginTop="30dp"/>



        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/btn_login"
            android:layout_below="@+id/tv_password"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/edittext_bg"
            android:text="Login"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/rel3"
        android:layout_below="@+id/rel2"
        android:layout_marginTop="30dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_forgotpassword"
        android:text="@string/Forgot_Password"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textSize"
        android:textColor="@color/black"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_newuser"
            android:text="@string/new_user_register_here"
            android:textSize="@dimen/textSize"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_forgotpassword"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>


    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="80dp"-->
        <!--android:id="@+id/rel4"-->
        <!--android:layout_below="@+id/rel3"-->
        <!--android:layout_marginTop="20dp">-->

    <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/tv_newuser"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:text="New User? Register here"-->
            <!--android:textSize="@dimen/textSize"-->
            <!--android:textColor="@color/black"-->
        <!--android:layout_centerHorizontal="true"/>-->

    <!--</RelativeLayout>-->
    </RelativeLayout>